# vcam-control

./: .gitignore  CHANGELOG.md  LICENSE  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release-please-config.json  skills-lock.json
.github/workflows/: deploy-website.yml  release.yml
app/: components.json  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
app/scripts/: bump-version.js
app/src/: main.ts
app/src-tauri/: Cargo.toml  hooks.nsh  tauri.conf.json
app/src-tauri/capabilities/: default.json  desktop.json
app/src-tauri/icons/: icon.icns
app/src-tauri/resources/: README.md
app/src-tauri/src/: lib.rs  vcam.rs
app/src/app/: App.vue
app/src/app/styles/: index.css
app/src/components/layout/: ActivityBar.vue  Header.vue  SettingsPanel.vue
app/src/components/ui/kbd/: Kbd.vue
app/src/components/ui/shortcut-recorder/: ShortcutDialog.vue  (+2 more)
app/src/locales/: en.json
app/src/pages/main/: MainPage.vue
app/src/shared/lib/: fs.ts  storage.ts
app/src/shared/locales/: en.json  vi.json
app/src/shared/types/: index.ts
app/src/stores/: assets.ts  settings.ts  ui.ts
app/src/types/: index.ts
app/src/utils/: fs.ts  i18n.ts  ipc.ts  shortcuts.ts
app/src/widgets/: ActivityBar.vue  Header.vue  SettingsPanel.vue
website/: index.html  package.json  tailwind.config.ts  vite.config.ts
website/src/: App.vue  index.css  main.ts  vcam-landing.ts
website/src/components/: FeaturesSection.vue  HeroSection.vue  SiteFooter.vue  SiteHeader.vue
website/src/composables/: useTheme.ts
website/src/locales/: en.json  vi.json
(+9 files in other folders)
